Crash when dropping and creating databases concurrently on Windows

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.8.0-rc3
    • Affects Version/s: 2.6.5, 2.8.0-rc1
    • Component/s: Concurrency, Storage
    • Fully Compatible
    • Windows
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I can reproduce this crash with 2.6.5 and 2.8.0-rc2-pre (dec3111d8) on Windows. I can't seem to repro on other operating systems or with 2.4.12, though.

       # Call Site
      00 mongod!mongo::NamespaceHashTable::put+0x77 [c:\data\mci\shell\src\src\mongo\db\storage\mmap_v1\catalog\hashtab.h @ 114]
      01 mongod!mongo::NamespaceIndex::add_ns+0x14d [c:\data\mci\shell\src\src\mongo\db\storage\mmap_v1\catalog\namespace_index.cpp @ 77]
      02 mongod!mongo::NamespaceIndex::add_ns+0x64 [c:\data\mci\shell\src\src\mongo\db\storage\mmap_v1\catalog\namespace_index.cpp @ 63]
      03 mongod!mongo::MMAPV1DatabaseCatalogEntry::_lazyInit+0x1dd [c:\data\mci\shell\src\src\mongo\db\storage\mmap_v1\mmap_v1_database_catalog_entry.cpp @ 527]
      04 mongod!mongo::MMAPV1DatabaseCatalogEntry::createCollection+0x54 [c:\data\mci\shell\src\src\mongo\db\storage\mmap_v1\mmap_v1_database_catalog_entry.cpp @ 601]
      05 mongod!mongo::Database::createCollection+0x39c [c:\data\mci\shell\src\src\mongo\db\catalog\database.cpp @ 505]
      06 mongod!mongo::userCreateNS+0x30b [c:\data\mci\shell\src\src\mongo\db\catalog\database.cpp @ 603]
      07 mongod!mongo::CmdCreate::run+0x52f [c:\data\mci\shell\src\src\mongo\db\dbcommands.cpp @ 596]
      08 mongod!mongo::_execCommand+0x72 [c:\data\mci\shell\src\src\mongo\db\dbcommands.cpp @ 1216]
      09 mongod!mongo::Command::execCommand+0xd82 [c:\data\mci\shell\src\src\mongo\db\dbcommands.cpp @ 1432]
      0a mongod!mongo::_runCommands+0x483 [c:\data\mci\shell\src\src\mongo\db\dbcommands.cpp @ 1507]
      0b mongod!mongo::runCommands+0x43 [c:\data\mci\shell\src\src\mongo\db\query\new_find.cpp @ 131]
      0c mongod!mongo::newRunQuery+0x42e [c:\data\mci\shell\src\src\mongo\db\query\new_find.cpp @ 549]
      0d mongod!mongo::receivedQuery+0x359 [c:\data\mci\shell\src\src\mongo\db\instance.cpp @ 220]
      0e mongod!mongo::assembleResponse+0x31a [c:\data\mci\shell\src\src\mongo\db\instance.cpp @ 390]
      0f mongod!mongo::MyMessageHandler::process+0xdd [c:\data\mci\shell\src\src\mongo\db\db.cpp @ 194]
      10 mongod!mongo::PortMessageServer::handleIncomingMsg+0x5df [c:\data\mci\shell\src\src\mongo\util\net\message_server_port.cpp @ 235]
      11 mongod!boost::`anonymous namespace'::thread_start_function+0x21 [c:\data\mci\shell\src\src\third_party\boost\libs\thread\src\win32\thread.cpp @ 185]
      12 mongod!_callthreadstartex+0x17 [f:\dd\vctools\crt\crtw32\startup\threadex.c @ 376]
      13 mongod!_threadstartex+0x102 [f:\dd\vctools\crt\crtw32\startup\threadex.c @ 354]
      14 KERNEL32!BaseThreadInitThunk+0x22
      15 ntdll!RtlUserThreadStart+0x34
      

            Assignee:
            Mark Benvenuto
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: