SERVER-16285: Crash when dropping and creating databases concurrently on Windows